--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,6 +13,6 @@ jobs:
       uses: actions/checkout@v3
     - name: Install dependencies
       run: |
-        app= "mule-mrcg-integ-realtime-sims-sys"
+        app= echo "mule-mrcg-integ-realtime-sims-sys" >> $GITHUB_ENV
         echo $app
 
